Intraduccióń al curso

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Introduccion al Curso</title>
+    <title>Introducción al Curso</title>
 </head>
 <body>
-    <!-- En este video solo se dio una Introduccion al curso -->
+    <!-- En este video solo se dio una Introducción al curso -->
 </body>
 </html>
