Fundamentos: ¿Como funciona la web?

--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Introducción al Curso</title>
+    <title>Fundamentos ¿Como funciona la web? </title>
 </head>
 <body>
-    <!-- En este video solo se dio una Introducción al curso -->
+   
+    <p>
+      En este video se explico el funcionamiento de la web 
+      se explico el significado de una url tambien de las peticiones cliente servidor etc..
+    </p>     
+     
 </body>
 </html>
