Fundamentos: Flujo de Trabajo

--- a/index.html
+++ b/index.html
@@ -2,14 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Fundamentos ¿Como funciona la web? </title>
+    <title>Fundamentos: Flujo de Trabajo </title>
 </head>
 <body>
-   
-    <p>
-      En este video se explico el funcionamiento de la web 
-      se explico el significado de una url tambien de las peticiones cliente servidor etc..
-    </p>     
+     
+    <h1>Flujo de Trabajo al momento de desarrollar un sitio web</h1>
+    <hr>
+    <br>  
+    <p>Nesesidad</p>  
+    <br>
+    <p>Experiencia de usuario</p>
+    <br>
+    <p>ui/Interfaz de usuario</p>
+    <br>
+    <p>Desarrollo</p>
+    <br>
+    <p>Front-End y Back-End</p>
      
 </body>
 </html>
